@@ -1,4 +1,7 @@
  2003-09-24 Al Riddoch <alriddoch@zepler.org>
+    - Typo in in_addr_t check fixed.
+    - skstream/skstream.cpp: Missed out typedef keyword fix.
+ 2003-09-24 Al Riddoch <alriddoch@zepler.org>
     - skstream/skstream.cpp: Add check, and fallback definition for
       in_addr_t.
  2003-09-24 Al Riddoch <alriddoch@zepler.org>
